// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostgresRunner should create unique instances 1`] = `
PostgresRunner {
  "containerId": "",
  "createResponsivenessCheckCmd": [Function],
  "getComposeService": [Function],
  "initializer": "",
  "isBridgeNetworkMode": false,
  "logger": Logger {
    "debug": [Function],
    "error": [Function],
    "info": [Function],
    "runnerService": "pg1",
    "runnerSymbol": "🦇 ",
    "setRunnerSymbol": [Function],
    "warn": [Function],
  },
  "runnerConfig": Object {
    "build": "",
    "commands": Array [],
    "connectionTimeout": 5,
    "database": "_",
    "dependsOn": Array [],
    "host": "localhost",
    "image": "some/image:123",
    "networks": undefined,
    "password": "_",
    "ports": Array [
      Object {
        "published": 5432,
        "target": 5432,
      },
    ],
    "props": Object {},
    "responsivenessTimeout": 30,
    "service": "pg1",
    "username": "_",
  },
}
`;

exports[`PostgresRunner should create unique instances 2`] = `
PostgresRunner {
  "containerId": "",
  "createResponsivenessCheckCmd": [Function],
  "getComposeService": [Function],
  "initializer": "",
  "isBridgeNetworkMode": false,
  "logger": Logger {
    "debug": [Function],
    "error": [Function],
    "info": [Function],
    "runnerService": "pg2",
    "runnerSymbol": "🦇 ",
    "setRunnerSymbol": [Function],
    "warn": [Function],
  },
  "runnerConfig": Object {
    "build": "",
    "commands": Array [],
    "connectionTimeout": 5,
    "database": "_",
    "dependsOn": Array [],
    "host": "localhost",
    "image": "some/image:123",
    "networks": undefined,
    "password": "_",
    "ports": Array [
      Object {
        "published": 5432,
        "target": 5432,
      },
    ],
    "props": Object {},
    "responsivenessTimeout": 30,
    "service": "pg2",
    "username": "_",
  },
}
`;
